refactor: Extracted String constants
All the LastFM API's  json keys are extracted as String constants